Implementation of Lexer in readMap